some typescript refactor and added settings

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,18 +1,28 @@
 {
   "books": "books",
   "chapters": "chapters",
-  "searchBooks": "search books",
+  "close": "close",
+  "code": "en",
+  "download": "download",
+  "english": "English",
+  "homeTitle": "Free Bible Translation Tools for the Global Chuch",
+  "menu": "menu",
+  "print": "print",
   "processes": "processes",
   "resources": "resources",
-  "translations": "translations",
-  "tools": "tools",
-  "support": "support",
-  "english": "English",
+  "searchBooks": "search books",
   "spanish": "Spanish",
+  "support": "support",
   "thisLanguage": "English",
-  "menu": "menu",
-  "close": "close",
-  "print": "print",
-  "download": "download",
-  "homeTitle": "Free Bible Translation Tools for the Global Chuch"
+  "tools": "tools",
+  "translations": "translations",
+  "cacheNetworkFirst": "Internet first",
+  "cacheFirst": "Use saved version first and Internet if needed",
+  "cacheOnly": "Use saved version only",
+  "downloadPrintAll": "download and print all",
+  "downloadSource": "download source",
+  "loading": "loading",
+  "loadingBehavior": "loading behavior",
+  "ariaNavigateForwardsOneChapter": "Navigate forwards one chapter",
+  "ariaNavigateBackwardsOneChapter": "Navigate backwards one chapter"
 }
