--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -1,17 +1,27 @@
 {
   "books": "libros",
   "chapters": "capitulos",
-  "searchBooks": "busque libros",
+  "close": "cierre",
+  "code": "es",
+  "download": "descargar",
+  "english": "English",
+  "homeTitle": "Herramientas gratis de la Traducción de la Bible para la Iglesia Global",
+  "print": "imprimar",
   "processes": "procesos",
   "resources": "recursos",
-  "translations": "traducciones",
-  "tools": "herramientas",
-  "support": "apoyo",
-  "english": "English",
+  "searchBooks": "busque libros",
   "spanish": "Español",
+  "support": "apoyo",
   "thisLanguage": "Español",
-  "close": "cierre",
-  "print": "imprimar",
-  "download": "descargar",
-  "homeTitle": "Herramientas gratis de la Traducción de la Bible para la Iglesia Global"
+  "tools": "herramientas",
+  "translations": "traducciones",
+  "cacheNetworkFirst": "La red primera",
+  "cacheFirst": "Use una versión guardada primera, y la red si sea necesario",
+  "cacheOnly": "Use solamente una versión guardada",
+  "downloadPrintAll": "descarga e imprime todo",
+  "downloadSource": "descarga de la fuente",
+  "loading": "descargando",
+  "loadingBehavior": "comportamiento de descargar",
+  "ariaNavigateForwardsOneChapter": "Navegue un capitulo adelante",
+  "ariaNavigateBackwardsOneChapter": "Navegue un capitulo atrás"
 }
