split out saving vs downloading

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,28 +1,30 @@
 {
-  "books": "books",
-  "chapters": "chapters",
-  "close": "close",
+  "books": "Books",
+  "chapters": "Chapters",
+  "close": "Close",
   "code": "en",
-  "download": "download",
+  "download": "Download",
+  "saving": "Saving",
+  "downloadWholeBook": "Download whole book",
   "english": "English",
   "homeTitle": "Free Bible Translation Tools for the Global Chuch",
-  "menu": "menu",
-  "print": "print",
-  "processes": "processes",
-  "resources": "resources",
-  "searchBooks": "search books",
+  "menu": "Menu",
+  "print": "Print",
+  "processes": "Processes",
+  "resources": "Resources",
+  "searchBooks": "Search books",
   "spanish": "Spanish",
-  "support": "support",
+  "support": "Support",
   "thisLanguage": "English",
   "tools": "tools",
   "translations": "translations",
   "cacheNetworkFirst": "Internet first",
   "cacheFirst": "Use saved version first and Internet if needed",
   "cacheOnly": "Use saved version only",
-  "downloadPrintAll": "download and print all",
-  "downloadSource": "download source",
-  "loading": "loading",
-  "loadingBehavior": "loading behavior",
+  "downloadPrintAll": "Print whole book",
+  "downloadSource": "Download source",
+  "loading": "Loading",
+  "loadingBehavior": "Loading behavior",
   "ariaNavigateForwardsOneChapter": "Navigate forwards one chapter",
   "ariaNavigateBackwardsOneChapter": "Navigate backwards one chapter"
 }
