--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -1,27 +1,29 @@
 {
-  "books": "libros",
-  "chapters": "capitulos",
-  "close": "cierre",
+  "books": "Libros",
+  "chapters": "Capitulos",
+  "close": "Cierre",
   "code": "es",
-  "download": "descargar",
+  "download": "Descargar",
+  "saving": "Guardando",
+  "downloadWholeBook": "Descargar el libro completo",
   "english": "English",
   "homeTitle": "Herramientas gratis de la Traducción de la Bible para la Iglesia Global",
-  "print": "imprimar",
-  "processes": "procesos",
-  "resources": "recursos",
-  "searchBooks": "busque libros",
+  "print": "Imprimir",
+  "processes": "Procesos",
+  "resources": "Recursos",
+  "searchBooks": "Busque Libros",
   "spanish": "Español",
-  "support": "apoyo",
+  "support": "Apoyo",
   "thisLanguage": "Español",
-  "tools": "herramientas",
-  "translations": "traducciones",
+  "tools": "Herramientas",
+  "translations": "Traducciones",
   "cacheNetworkFirst": "La red primera",
   "cacheFirst": "Use una versión guardada primera, y la red si sea necesario",
   "cacheOnly": "Use solamente una versión guardada",
-  "downloadPrintAll": "descarga e imprime todo",
-  "downloadSource": "descarga de la fuente",
-  "loading": "descargando",
-  "loadingBehavior": "comportamiento de descargar",
+  "downloadPrintAll": "Descarga e imprime todo",
+  "downloadSource": "Descarga de la fuente",
+  "loading": "Descargando",
+  "loadingBehavior": "Comportamiento de descargar",
   "ariaNavigateForwardsOneChapter": "Navegue un capitulo adelante",
   "ariaNavigateBackwardsOneChapter": "Navegue un capitulo atrás"
 }
