separation in bible schema templates btw OT and NT

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -26,5 +26,7 @@
   "loading": "Loading",
   "loadingBehavior": "Loading behavior",
   "ariaNavigateForwardsOneChapter": "Navigate forwards one chapter",
-  "ariaNavigateBackwardsOneChapter": "Navigate backwards one chapter"
+  "ariaNavigateBackwardsOneChapter": "Navigate backwards one chapter",
+  "oldTestament": "Old Testament",
+  "newTestament": "New Testament"
 }
