--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -25,5 +25,7 @@
   "loading": "Descargando",
   "loadingBehavior": "Comportamiento de descargar",
   "ariaNavigateForwardsOneChapter": "Navegue un capitulo adelante",
-  "ariaNavigateBackwardsOneChapter": "Navegue un capitulo atrás"
+  "ariaNavigateBackwardsOneChapter": "Navegue un capitulo atrás",
+  "oldTestament": "El Antiguo Testamento",
+  "newTestament": "Nuevo Testamento"
 }
