updating language for saving book offline for service worker

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -5,7 +5,7 @@
   "code": "en",
   "download": "Download",
   "saving": "Saving",
-  "downloadWholeBook": "Download whole book",
+  "saveForOfflineReading": "Save for reading offline",
   "english": "English",
   "homeTitle": "Free Bible Translation Tools for the Global Chuch",
   "menu": "Menu",
