--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -5,7 +5,7 @@
   "code": "es",
   "download": "Descargar",
   "saving": "Guardando",
-  "downloadWholeBook": "Descargar el libro completo",
+  "saveForOfflineReading": "Guardar para leer sin conexión",
   "english": "English",
   "homeTitle": "Herramientas gratis de la Traducción de la Bible para la Iglesia Global",
   "print": "Imprimir",
