forgot to make the new download src option translateable

--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -27,5 +27,6 @@
   "ariaNavigateForwardsOneChapter": "Navegue un capitulo adelante",
   "ariaNavigateBackwardsOneChapter": "Navegue un capitulo atrás",
   "oldTestament": "El Antiguo Testamento",
-  "newTestament": "Nuevo Testamento"
+  "newTestament": "Nuevo Testamento",
+  "downloadUsfmSource": "Descargar fuente USFM"
 }
