--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -28,5 +28,6 @@
   "ariaNavigateForwardsOneChapter": "Navigate forwards one chapter",
   "ariaNavigateBackwardsOneChapter": "Navigate backwards one chapter",
   "oldTestament": "Old Testament",
-  "newTestament": "New Testament"
+  "newTestament": "New Testament",
+  "downloadUsfmSource": "Download source USFM"
 }
